syntax = "proto3";

package cart;

service CartService {
  rpc AddItem(AddItemRequest) returns (AddItemResponse) {}
  rpc RemoveItem(RemoveItemRequest) returns (RemoveItemResponse) {}
  rpc GetCart(GetCartRequest) returns (GetCartResponse) {}
}

message Cart {
  string id = 1;
  repeated Item items = 2;
}

message Item {
  string id = 1;
  string name = 2;
  int32 quantity = 3;
  float price = 4;
}

message AddItemRequest {
  string cart_id = 1;
  Item item = 2;
}

message AddItemResponse {
  Cart cart = 1;
}

message RemoveItemRequest {
  string item_id = 1;
  string cart_id = 2;
}

message RemoveItemResponse {
  Cart cart = 1;
}

message GetCartRequest {
  string cart_id = 1;
}

message GetCartResponse {
  Cart cart = 1;
}


